--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,14 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Soup\\PostgersPhp\\": "src/"
+            "Src\\Core\\": "src/Core/",
+            "Src\\App\\": "src/App/"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "^12.4"
+    },
+    "require": {
+        "symfony/var-dumper": "^7.3"
     }
 }
