--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "phpunit/phpunit": "^12.4"
     },
     "require": {
-        "symfony/var-dumper": "^7.3"
+        "symfony/var-dumper": "^7.3",
+        "psr/container": "^2.0"
     }
 }
